# ut-indicator-weather

./: .gitignore  CMakeLists.txt  README.md  TODO  clickable.json  indicator-weather.desktop  indicator-weather.desktop.in  manifest.json.in
indicator/: CMakeLists.txt  bhdouglass-indicator-weather.conf  bhdouglass-indicator-weather.py  com.bhdouglass.indicator.weather  install.sh  uninstall-system.sh  uninstall.sh
plugins/: CMakeLists.txt
plugins/Indicator/: CMakeLists.txt  indicator.cpp  indicator.h  plugin.cpp  plugin.h  settings.cpp  settings.h
plugins/PamAuthentication/: AuthenticationService.qml  CMakeLists.txt  README.md  pamauthentication.h  qmldir
po/: CMakeLists.txt  indicator-weather-de.po  indicator-weather-eo.po  indicator-weather-es.po  indicator-weather-fr.po  indicator-weather-hu.po  indicator-weather-it.po  indicator-weather-pt.po  indicator-weather-sl.po  indicator-weather-zh_CN.po  indicator-weather.pot
qml/: Main.qml  TemperatureUnitSelect.qml  WeatherProviderSelect.qml
